--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,16 +1,16 @@
 :root {
   --hs-links: 48 100%;
   --color-foreground: hsl(0, 0%, 100%);
-  --color-background: hsl(278, 73%, 19%);
+  --color-background: hsl(243, 83%, 45%);
   --color-links: hsl(var(--hs-links) 50%);
   --color-links-hover: hsl(var(--hs-links) 45%);
-  --color-border: hsl(277, 85%, 38%);
+  --color-border: hsl(214, 58%, 71%);
   --color-invalid: hsl(356, 100%, 71%);
   --gradient-background: radial-gradient(
     circle,
-    rgba(152, 11, 238, 1) 0%,
-    rgba(118, 15, 181, 1) 35%,
-    rgba(58, 13, 85, 1) 100%
+    rgb(120, 157, 226) 0%,
+    rgb(107, 143, 197) 35%,
+    rgb(37, 60, 94) 100%
   );
   --font-body: -apple-system, "Segoe UI", Helvetica Neue, Helvetica, Roboto,
     Arial, sans-serif, system-ui, "Apple Color Emoji", "Segoe UI Emoji";
